first night, complete question 1-2

--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -57,11 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boston housing dataset has 489 data points with 4 variables each.\n"
+     ]
+    }
+   ],
    "source": [
     "# 载入波士顿房屋的数据集\n",
     "data = pd.read_csv('housing.csv')\n",
@@ -70,6 +76,98 @@
     "    \n",
     "# 完成\n",
     "print \"Boston housing dataset has {} data points with {} variables each.\".format(*data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RM</th>\n",
+       "      <th>LSTAT</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <th>MEDV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6.575</td>\n",
+       "      <td>4.98</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>504000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6.421</td>\n",
+       "      <td>9.14</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>453600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.185</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>728700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6.998</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>701400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7.147</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>760200.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      RM  LSTAT  PTRATIO      MEDV\n",
+       "0  6.575   4.98     15.3  504000.0\n",
+       "1  6.421   9.14     17.8  453600.0\n",
+       "2  7.185   4.03     17.8  728700.0\n",
+       "3  6.998   2.94     18.7  701400.0\n",
+       "4  7.147   5.33     18.7  760200.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
    ]
   },
   {
@@ -100,28 +198,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics for Boston housing dataset:\n",
+      "\n",
+      "Minimum price: $105,000.00\n",
+      "Maximum price: $1,024,800.00\n",
+      "Mean price: $454,342.94\n",
+      "Median price $438,900.00\n",
+      "Standard deviation of prices: $165,340.28\n"
+     ]
+    }
+   ],
    "source": [
     "#TODO 1\n",
     "\n",
     "#目标：计算价值的最小值\n",
-    "minimum_price = None\n",
+    "minimum_price = prices.min()\n",
     "\n",
     "#目标：计算价值的最大值\n",
-    "maximum_price = None\n",
+    "maximum_price = prices.max()\n",
     "\n",
     "#目标：计算价值的平均值\n",
-    "mean_price = None\n",
+    "mean_price = prices.mean()\n",
     "\n",
     "#目标：计算价值的中值\n",
-    "median_price = None\n",
+    "median_price = prices.median()\n",
     "\n",
     "#目标：计算价值的标准差\n",
-    "std_price = None\n",
+    "std_price = prices.std()\n",
     "\n",
     "#目标：输出计算的结果\n",
     "print \"Statistics for Boston housing dataset:\\n\"\n",
@@ -152,7 +262,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 问题 1 - 回答："
+    "### 问题 1 - 回答：\n",
+    "#### RM\n",
+    "当RM增大时，MEDV将增大。因为RM是每个房屋的房间数，间接的就代表这个房屋的面积，当然面积越大，房屋价值越高。\n",
+    "#### LSTAT\n",
+    "当LSTAT增大时，MEDV将减小。因为LSTAT是低收入阶层的比例，间接的就代表了该地区人群的收入水平，不过是反向的，当然收入水平越低，房屋价值就越低（房屋价值过高，低收入水平的人买不起）。\n",
+    "#### PTRATIO\n",
+    "当PTRATIO增大时，MEDV将减小。因为PTRATIO是学生与老师的比例，间接的就代表了该地区的教育水平，不过是反向的，学生与老师的比例越高，每个学生所分配的教育资源就越低，也就是教育水平就越低，通常该地区的房屋价值也会低。"
    ]
   },
   {
@@ -170,17 +286,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(391, 3) (391L,)\n",
+      "(98, 3) (98L,)\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO 2\n",
     "\n",
     "# 提示： 导入train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = None"
+    "from sklearn.model_selection import train_test_split as tts\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = tts(features, prices, test_size=0.2, random_state=0)\n",
+    "print X_train.shape, y_train.shape\n",
+    "print X_test.shape, y_test.shape"
    ]
   },
   {
@@ -199,7 +326,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 问题 2 - 回答:"
+    "### 问题 2 - 回答:\n",
+    "#### 将数据集按一定比例分为训练用的数据集和测试用的数据集对学习算法有什么好处？\n",
+    "将数据集按比例做切分，能够使用统一数据集的部分数据对学习算法的性能做测试，因为测试数据集是整体数据的一部分，所以用其做性能测试比较有说服力，能够让学习算法有很好的泛化能力。\n",
+    "#### 如果用模型已经见过的数据，例如部分训练集数据进行测试，又有什么坏处？\n",
+    "如果一个学习算法的训练和测试是在相同的数据上进行，则算法在测试集上的性能表现会特别好，而对未知数据的预测能力很差，导致‘过拟合’，即泛化能力差。"
    ]
   },
   {
