--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -161,7 +161,7 @@
        "4  7.147   5.33     18.7  760200.0"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
       "Maximum price: $1,024,800.00\n",
       "Mean price: $454,342.94\n",
       "Median price $438,900.00\n",
-      "Standard deviation of prices: $165,340.28\n"
+      "Standard deviation of prices: $165,171.13\n"
      ]
     }
    ],
@@ -219,19 +219,19 @@
     "#TODO 1\n",
     "\n",
     "#目标：计算价值的最小值\n",
-    "minimum_price = prices.min()\n",
+    "minimum_price = np.min(prices)\n",
     "\n",
     "#目标：计算价值的最大值\n",
-    "maximum_price = prices.max()\n",
+    "maximum_price = np.max(prices)\n",
     "\n",
     "#目标：计算价值的平均值\n",
-    "mean_price = prices.mean()\n",
+    "mean_price = np.mean(prices)\n",
     "\n",
     "#目标：计算价值的中值\n",
-    "median_price = prices.median()\n",
+    "median_price = np.median(prices)\n",
     "\n",
     "#目标：计算价值的标准差\n",
-    "std_price = prices.std()\n",
+    "std_price = np.std(prices)\n",
     "\n",
     "#目标：输出计算的结果\n",
     "print \"Statistics for Boston housing dataset:\\n\"\n",
@@ -328,9 +328,9 @@
    "source": [
     "### 问题 2 - 回答:\n",
     "#### 将数据集按一定比例分为训练用的数据集和测试用的数据集对学习算法有什么好处？\n",
-    "将数据集按比例做切分，能够使用统一数据集的部分数据对学习算法的性能做测试，因为测试数据集是整体数据的一部分，所以用其做性能测试比较有说服力，能够让学习算法有很好的泛化能力。\n",
+    "将数据集按比例做切分，能够使用统一数据集的部分数据对学习算法的性能做测试，因为测试数据集是整体数据的一部分，所以用其做性能测试比较有说服力。\n",
     "#### 如果用模型已经见过的数据，例如部分训练集数据进行测试，又有什么坏处？\n",
-    "如果一个学习算法的训练和测试是在相同的数据上进行，则算法在测试集上的性能表现会特别好，而对未知数据的预测能力很差，导致‘过拟合’，即泛化能力差。"
+    "如果一个学习算法的训练和测试是在相同的数据上进行，则算法在测试集上的性能表现会特别好，就像是考试之前题目泄露了，学生考的特别好，但却不能说学生课程掌握的特别好，因此，如果模型用已经见过的数据做测试，不能据此判断模型的好坏。"
    ]
   },
   {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -559,9 +559,9 @@
    "metadata": {},
    "source": [
     "### 问题 5 - 回答:\n",
-    "模型以最大深度为1和10时，都出现了很大的方差。\n",
+    "模型以最大深度为1时，模型的预测出现了很大的偏差。从图中可以看到，当max_depth为1时，模型在测试集上的决定系数低，误差大，表明模型的预测不准，这种现象称为‘欠拟合’，通常通过增加模型的复杂度提高模型性能。\n",
     "\n",
-    "从图中可以看到，训练集的误差基本没有，评分很高，而测试集的误差很大，说明模型在训练集上的拟合过好，而导致了模型的低泛化能力，这种现象称为‘过拟合’，通常通过增加训练集的数据量或者降低模型的复杂度可以解决。"
+    "模型以最大深度为10时，模型的预测出现了很大的方差。从图中可以看到，当max_depth位10时，训练集的误差基本没有，评分很高，而测试集的误差很大，说明模型在训练集上的拟合过好，而导致了模型的低泛化能力，这种现象称为‘过拟合’，通常通过增加训练集的数据量或者降低模型的复杂度提高模型性能。"
    ]
   },
   {
@@ -624,13 +624,13 @@
    "metadata": {},
    "source": [
     "### 问题 8 - 回答：\n",
-    "K折交叉验证法是一种确定模型最佳参数的方法，它把所有的训练集数据随机分成K等份，每次从分好的K等份子集中拿出一个作为测试集，其它K-1个子集作为训练集，对模型进行训练打分，计算K次求得的分数的平均值，作为该模型的分数；\n",
+    "K折交叉验证法是一种确定模型最佳参数的方法，默认情况下，它把所有的训练集数据随机分成K等份，每次从分好的K等份子集中拿出一个作为测试集，其它K-1个子集作为训练集，对模型进行训练打分，计算K次求得的分数的平均值，作为该模型的分数；\n",
     "\n",
     "GridSearchCV是返回得分最高的参数组合，而得分的计算是通过具体的算法，运用交叉验证来得到参数组合的平均分，GridSearchCV是取该平均分的最高分的参数组合为最佳的参数组合；\n",
     "\n",
     "GridSearchCV中的`'cv_results_'`属性展示了整个网格搜索过程中不同参数组合的各项特征，其中就包括参数组合的得分；\n",
     "\n",
-    "网格索索时如果不使用交叉验证则无法对模型不同参数组合进行打分，也就无法返回最佳的参数组合；交叉验证通过把训练集随机分成K等份，每次取一份作为测试集，其余K-1份作为训练集，所以每次模型训练完成，都可以进行一次测试集上的打分，K次得分的平均分，即为该参数组合的最终得分。"
+    "网格搜索时如果不使用交叉验证而是使用单次分割的方式，则无法保证有充足的训练数据对模型进行训练，从而无法保证得到最优性能的模型参数；而交叉验证通过把训练集随机分成K等份，每次取一份作为测试集，其余K-1份作为训练集，假设数据集的总数据个数为N，则K折交叉验证，模型的训练集数据个数为(K-1)*N，能够保证有充足的训练数据对模型进行训练，避免模型‘过拟合’。"
    ]
   },
   {
